--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body {
   
   .hero-content {
     text-align: center;
-    color: black
+    color: white;
+    text-shadow: 2px 2px 2px #111;
   }
   
   .hero h1 {
